@@ -17,5 +17,4 @@ min_version = 1.39
 [Prereqs]
 CGI = 3.12
 Class::Load = 0.03
-autobox = 1.10
 Test::More = 0.94
